# tensorboard-reducer

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  citation.cff  pyproject.toml  readme.md  requirements.txt  runtime.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  link-check.yml  lint.yml  paper.yml  publish.yml  test.yml
assets/: python_api_example.ipynb
examples/: basic_python_api_example.ipynb  functorch_mlp_ensemble.ipynb  wandb_integration.ipynb
paper/: paper.md  references.bib
scripts/: generate_test_data.py
tensorboard_reducer/: __init__.py  event_loader.py  io.py  load.py  main.py  reduce.py  write.py
tests/: conftest.py  test_init.py  test_load.py  test_main.py  test_read.py  test_reduce.py  test_write.py  test_write_csv.py  test_write_events.py
tests/runs/: _generate_test_data.py
tests/runs/duplicate_steps/run_1/: events.out.tfevents.1622966509.janoshs-mbp.lan.86059.0
tests/runs/duplicate_steps/run_2/: events.out.tfevents.1622966509.janoshs-mbp.lan.86059.1
tests/runs/duplicate_steps/run_3/: events.out.tfevents.1622966509.janoshs-mbp.lan.86059.2
tests/runs/lax/run_1/: events.out.tfevents.1622543341.janoshs-mbp.lan.86862.3
tests/runs/lax/run_2/: events.out.tfevents.1622543341.janoshs-mbp.lan.86862.4
tests/runs/lax/run_3/: events.out.tfevents.1622543341.janoshs-mbp.lan.86862.5
tests/runs/strict/run_1/: events.out.tfevents.1622543341.janoshs-mbp.lan.86862.0
tests/runs/strict/run_2/: events.out.tfevents.1622543341.janoshs-mbp.lan.86862.1
tests/runs/strict/run_3/: events.out.tfevents.1622543341.janoshs-mbp.lan.86862.2
tests/tensorboard_runs/run_1/: events.out.tfevents.1616760637.janoshs-mbp.lan.45184.0
tests/tensorboard_runs/run_2/: events.out.tfevents.1616760637.janoshs-mbp.lan.45184.1
tests/tensorboard_runs/run_3/: events.out.tfevents.1616760637.janoshs-mbp.lan.45184.2
