[project]
name = "tensorboard-reducer"
version = "0.3.0"
description = "Reduce multiple TensorBoard runs to new event (or CSV) files"
authors = [{ name = "Janosh Riebesell", email = "janosh.riebesell@gmail.com" }]
license = { file = "license" }
readme = "readme.md"
keywords = [
  "tensorboard",
  "runs",
  "reducer",
  "pytorch",
  "machine-learning",
  "statistics",
  "aggregate",
  "averaging",
  "logs",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = ["tensorboard >= 2.0", "numpy >= 1.19", "pandas >= 1.0.0"]

[project.urls]
Homepage = "https://github.com/janosh/tensorboard-reducer"
Package = "https://pypi.org/project/tensorboard-reducer"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "torch >= 1.6"]
excel = ["openpyxl", "xlwt", "xlrd"]

[project.scripts]
tb-reducer = "tensorboard_reducer:main"

[tool.setuptools.packages]
find = { include = ["tensorboard_reducer*"], exclude = ["tests*"] }

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py38"
select = [
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",   # pycodestyle
  "ERA", # flake8-eradicate
  "F",   # pyflakes
  "I",   # isort
  "PLE", # pylint error
  "PLW", # pylint warning
  "PYI", # flakes8-pyi
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "TID", # tidy imports
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]
ignore = [
  "B904",    # Within an except clause, raise exceptions with ...
  "D100",    # Missing docstring in public module
  "D104",    # Missing docstring in public package
  "D205",    # 1 blank line required between summary line and description
  "PLW2901", # for loop variable overwritten by assignment target
]
pydocstyle.convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D103"]
"examples/*" = ["D102", "D103", "D107", "E402"]
