[project]
name = "tensorboard-reducer"
version = "0.3.1"
description = "Reduce multiple TensorBoard runs to new event (or CSV) files"
authors = [{ name = "Janosh Riebesell", email = "janosh.riebesell@gmail.com" }]
license = { file = "license" }
readme = "readme.md"
keywords = [
  "aggregate",
  "averaging",
  "logs",
  "machine-learning",
  "pytorch",
  "reducer",
  "runs",
  "statistics",
  "tensorboard",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.8"
dependencies = [
  "numpy >= 1.19",
  "pandas >= 1.0.0",
  "tensorboard >= 2.0",
  "tqdm >= 4.0",
]

[project.urls]
Homepage = "https://github.com/janosh/tensorboard-reducer"
Package = "https://pypi.org/project/tensorboard-reducer"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "torch >= 1.6"]
excel = ["openpyxl"]

[project.scripts]
tb-reducer = "tensorboard_reducer:main"

[tool.setuptools.packages]
find = { include = ["tensorboard_reducer*"], exclude = ["tests*"] }

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py38"
include = ["**/pyproject.toml", "*.ipynb", "*.py", "*.pyi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",  # Missing type annotation for self in method
  "ANN401",
  "C901",
  "COM812",
  "D100",    # Missing docstring in public module
  "D205",    # 1 blank line required between summary line and description
  "EM101",
  "EM102",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PT006",   # pytest-parametrize-names-wrong-type
  "PTH",
  "T201",
  "TRY003",
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D103", "D104", "FBT001", "INP001", "S101"]
"__init__.py" = ["F401"]
"examples/*" = ["D102", "D103", "D107", "E402", "FA102"]
