[metadata]
name = tensorboard-reducer
version = 0.2.9
description = Reduce multiple TensorBoard runs to new event (or CSV) files
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/janosh/tensorboard-reducer
author = Janosh Riebesell
author_email = janosh.riebesell@gmail.com
license = MIT
license_files = license
keywords = tensorboard, runs, reducer, pytorch, machine-learning, statistics, aggregate, averaging, logs
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
project_urls =
    Package = https://pypi.org/project/tensorboard-reducer

[options]
packages = find:
python_requires = >=3.8
install_requires =
    tensorboard >= 2.0
    numpy >= 1.19
    pandas >= 1.0.0

[options.extras_require]
test = pytest; pytest-cov
test_data = torch >= 1.6
excel = openpyxl; xlwt; xlrd

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    tb-reducer = tensorboard_reducer:main

[bdist_wheel]
universal = True

# Tooling Config
[flake8]
# Use black's default line length.
max-line-length = 88
max-complexity = 16
# E731: do not assign a lambda expression, use a def
# E203: whitespace before ':'
ignore = E731, E203
per-file-ignores =
  # F401: imported but unused
  __init__.py: F401

[isort]
profile = black

[tool:pytest]
testpaths = tests
# https://stackoverflow.com/a/50821160
addopts = -p no:warnings

[mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[pydocstyle]
convention = google
# D100: Missing docstring in public module
# D104: Missing docstring in public package
# D107: Missing docstring in __init__
# D205: 1 blank line required between summary line and description
# D415: First line should end with ., ? or !
add-ignore = D100,D104,D107,D205,D415
